# server/server.go
@@ -9,6 +9,9 @@ import (
 	adsHandler "Airplane-Divar/handlers/ads"
 	"log"
 
+	bookmarkDatastore "Airplane-Divar/datastore/bookmarks"
+	bookmarksHanlder "Airplane-Divar/handlers/bookmarks"
+
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
@@ -47,6 +50,11 @@ func StartServer() {
 	paymentDatastore := payment.New(db)
 	paymentHandler := handlers.NewPaymentHandler(paymentDatastore)
 	paymentRoutes(e, paymentHandler)
+
+	// Bookmarks
+	bmDatastore := bookmarkDatastore.New(db)
+	bmHandlers := bookmarksHanlder.New(bmDatastore)
+	bookmarksRoutes(e, bmHandlers)
 
 	log.Fatal(e.Start(":8080"))
 }
